remplace frameworks by node js

--- a/complete/deploy/ansible/webapp.yml
+++ b/complete/deploy/ansible/webapp.yml
@@ -22,8 +22,6 @@
           sku: S1
           number_of_workers: 1
         frameworks:
-          - name: "java"
-            version: "8"
-            settings:
-              java_container: tomcat
-              java_container_version: 8.5
+          - name: "node"
+            version: "14"
+          
